@@ -4,6 +4,7 @@ Version 1.0-rc3 (changes from aircrack-ng 1.0-rc2) - Released ?? ??? 2009:
 * aircrack-ng: Fixed errors when compiling on OS X 10.5.6 PPC.
 * aircrack-ng: Added an option to write the key to a file.
 * airolib-ng: Fixed a bug where database is created even if parameters are not correct.
+* airmon-ng and airdriver-ng: Move them in script/ directory.
 * airmon-ng: Bypass interface checks when ps command returns an error. Needed for BusyBox limited ps command.
 * easside-ng & wesside-ng: Fixing again "Error Wrote 39 out of 30" error message.
 
